{
  "version": 4,
  "terraform_version": "0.12.8",
  "serial": 282,
  "lineage": "b826e323-ddd8-0676-67ae-f28a04b7d202",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ad37dbbe571ce2a1",
            "arn": "arn:aws:ec2:eu-west-3:682221941355:instance/i-047773ac5500c410d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-047773ac5500c410d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "parispem",
            "monitoring": false,
            "primary_network_interface_id": "eni-0d81d0f6a7373b62a",
            "private_dns": "ip-10-10-0-171.eu-west-3.compute.internal",
            "private_ip": "10.10.0.171",
            "public_ip": "35.180.122.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f60d8f187b6aba12",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06c009e906a818efd",
            "tags": {
              "Name": "open-mrs1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0289c4e44dacb4f8e"
            ]
          },
          "depends_on": [
            "aws_security_group.my_sg",
            "aws_subnet.subnet-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ad37dbbe571ce2a1",
            "arn": "arn:aws:ec2:eu-west-3:682221941355:instance/i-04dee0dcd64dd798f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-04dee0dcd64dd798f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "parispem",
            "monitoring": false,
            "primary_network_interface_id": "eni-04c313534bd98a66b",
            "private_dns": "ip-10-10-1-121.eu-west-3.compute.internal",
            "private_ip": "10.10.1.121",
            "public_ip": "52.47.191.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-041e72aea1237b869",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0869451d2289cc620",
            "tags": {
              "Name": "open-mrs"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0289c4e44dacb4f8e"
            ]
          },
          "depends_on": [
            "aws_security_group.my_sg",
            "aws_subnet.subnet-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0870491186e77ea8d",
            "owner_id": "682221941355",
            "tags": {
              "Name": "open-mrs"
            },
            "vpc_id": "vpc-0fc210ca18e7637b6"
          },
          "depends_on": [
            "aws_vpc.My_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0384fd8cd106945c0",
            "owner_id": "682221941355",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0870491186e77ea8d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "open-mrs"
            },
            "vpc_id": "vpc-0fc210ca18e7637b6"
          },
          "depends_on": [
            "aws_internet_gateway.tf-igw",
            "aws_vpc.My_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_rt_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0378c7ec77e8ada2c",
            "route_table_id": "rtb-0384fd8cd106945c0",
            "subnet_id": "subnet-06c009e906a818efd"
          },
          "depends_on": [
            "aws_route_table.vpc-rt",
            "aws_subnet.subnet-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_rt_association2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014fd25a4f663a33d",
            "route_table_id": "rtb-0384fd8cd106945c0",
            "subnet_id": "subnet-0869451d2289cc620"
          },
          "depends_on": [
            "aws_route_table.vpc-rt",
            "aws_subnet.subnet-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:682221941355:security-group/sg-0289c4e44dacb4f8e",
            "description": "created from terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0289c4e44dacb4f8e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "my_sg",
            "name_prefix": null,
            "owner_id": "682221941355",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "open-mrs"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc210ca18e7637b6"
          },
          "depends_on": [
            "aws_vpc.My_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:682221941355:subnet/subnet-06c009e906a818efd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.10.0.0/24",
            "id": "subnet-06c009e906a818efd",
            "map_public_ip_on_launch": false,
            "owner_id": "682221941355",
            "tags": {
              "Name": "open-mrs"
            },
            "vpc_id": "vpc-0fc210ca18e7637b6"
          },
          "depends_on": [
            "aws_vpc.My_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:682221941355:subnet/subnet-0869451d2289cc620",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-0869451d2289cc620",
            "map_public_ip_on_launch": false,
            "owner_id": "682221941355",
            "tags": {
              "Name": "open-mrs"
            },
            "vpc_id": "vpc-0fc210ca18e7637b6"
          },
          "depends_on": [
            "aws_vpc.My_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "My_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:682221941355:vpc/vpc-0fc210ca18e7637b6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-086c448a77aafd874",
            "default_route_table_id": "rtb-088c5c48b647f537f",
            "default_security_group_id": "sg-0181640534d4291c7",
            "dhcp_options_id": "dopt-30272259",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0fc210ca18e7637b6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-088c5c48b647f537f",
            "owner_id": "682221941355",
            "tags": {
              "Name": "open-mrs"
            }
          }
        }
      ]
    }
  ]
}